2006-02-27  Albert Chu  <chu11@llnl.gov>
	
	* src/cerebrod/cerebrod_speaker.c (cerebrod_send_heartbeat): Fix
	port assignment bug.

	* src/modules/metric/cerebro_metric_shutdown.c
	(_metric_shutdown_handler): Fix corner case when multiple
	SIGTERM/SIGINT signals are received.

	* Beginning preparations to support multiple metrics logged by
	same monitor module.

	* src/cerebrod/cerebrod_listener_data.h,
	src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules),
	src/libs/include/cerebro/cerebro_monitor_module.h
	(cerebro_monitor_module_info), src/libs/modules/monitor_module.c
	(_monitor_module_cb): Rename "metric_name" to "metric_names"
	appropriately.

	* src/cerebrod/cerebrod_listener_data.c (_monitor_update): Update
	call to new API.

	* src/libs/include/cerebro/cerebro_monitor_module.h
	(Cerebro_monitor_metric_name): Renamed typedef to
	Cerebro_monitor_metric_names.

	* src/libs/include/cerebro/cerebro_monitor_module.h
	(Cerebro_monitor_metric_update): Updated with additional
	metric_name parameter.

	* src/libs/modules/monitor_module.h,
	src/libs/modules/monitor_module.c (monitor_module_metric_name):
	Rename to monitor_module_metric_names.

	* src/libs/modules/monitor_module.h,
	src/libs/modules/monitor_module.c
        (monitor_module_metric_update): Updated with additional
	metric_name parameter. Update call to new API.
	
	* man/cerebro_module_devel.3.in: Updated with new info.

2006-02-22  Albert Chu  <chu11@llnl.gov>

	Support new graceful shutdown metric module.

	* src/modules/metric/cerebro_metric_shutdown.c: New file.
	
	* config/ac_shutdown.m4: New file.

	* src/modules/metric/Makefile.am, configure.ac: Support new
	metric.

	* src/cerebrod/cerebrod_speaker.c (_speaker_socket_setup): Renamed
	to _speaker_socket_create due to new use.

	* src/cerebrod/cerebrod_speaker.c (cerebrod_send_heartbeat): New
	function.

	* man/cerebro_module.3.in: Update with new metric module info.

	* src/libs/include/protocol/cerebro_metric_control_protocol.h.in,